--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=desafio
-spring.data.mongodb.uri=mongodb://localhost:27017/
-spring.data.mongodb.database=caju
+#spring.data.mongodb.uri=mongodb://localhost:27017/
+spring.data.mongodb.uri=${MONG0_URI}
+# spring.data.mongodb.database=caju
+spring.data.mongodb.database=${MONGO_DATABASE}
